o Now browseRsp("foo.html") is interpreted as browseRsp(path="foo.html")
  whenever then requested file is not in an URL format.
o Now browseRsp() automatically adds the current directory as well
  an rsp/ subdirectory of it to the list of known root paths.
o Added argument 'urlRoot' to browseRsp().
o Added argument 'trim=FALSE' to getParameter() and getParameters()
  for HttpRequest.



Version: 0.9.5 [2013-05-20]
o CRAN POLICY: Now all Rd \usage{} lines are at most 90 characters long.
o CRAN POLICY: Now all Rd example lines are at most 100 characters long.


Version: 0.9.4 [2013-05-18]
o DOCUMENTATION: Now vignettes are properly using opened and closed
  quotation marks.  Thanks Saunak Sen at UCSF for reporting on this.
o Now empty lines in .rspPlugins are ignored.


Version: 0.9.3 [2013-05-08]
o DOCUMENTATION: Explicitly added arguments 'file' & 'path' to
  rcat() to make the help page more user friendly [although
  they're just passed as is to rstring()].


Version: 0.9.2 [2013-04-04]
o The internal RSP engine has undergone a major redesign.
o BACKWARD COMPATIBILITY: The RSP processor of the built-in HTTP
  daemon is by default still using the previous RSP engine.
  Note, the built-in HTTP daemon is only there as a proof of
  concept and is not recommended for other than toy examples.


Version: 0.9.1 [2013-04-01]
o The internal RSP engine is undergoing a major redesign.
o Whenever only a URL directory is requested, the built-in HTTP daemon
  now loads the first file matching "^index[.](html|.*)$".  It used
  to only look for 'index.rsp'.


Version: 0.9.0 [2013-03-01]
o More functions can now be called without loading the package.
o DOCUMENTATION: Updated the help usage section for all static methods.
o Prepared package for the upcoming R (>= 3.0.0) generic vignette support.
o Simplified how to build non-Sweave vignettes for R (< 3.0.0).
  It now immitates how it is done in R (>= 3.0.0).


Version: 0.8.5 [2013-01-20]